--- a/util/pom.xml
+++ b/util/pom.xml
@@ -22,12 +22,12 @@
   <parent>
     <groupId>com.google.cloud.bigdataoss</groupId>
     <artifactId>bigdataoss-parent</artifactId>
-    <version>2.2.11</version>
+    <version>2.2.12-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>util</artifactId>
-  <version>2.2.11</version>
+  <version>2.2.12-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
