--- a/gcs/pom.xml
+++ b/gcs/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>com.google.cloud.bigdataoss</groupId>
     <artifactId>bigdataoss-parent</artifactId>
-    <version>3.0.0-RC01-SNAPSHOT</version>
+    <version>3.0.0-RC01</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -31,7 +31,7 @@
   </description>
 
   <artifactId>gcs-connector</artifactId>
-  <version>3.0.0-RC01-SNAPSHOT</version>
+  <version>3.0.0-RC01</version>
 
   <profiles>
     <profile>
