--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
   <groupId>com.google.cloud.bigdataoss</groupId>
   <artifactId>bigdataoss-parent</artifactId>
-  <version>3.0.0-RC01-SNAPSHOT</version>
+  <version>3.0.0-RC01</version>
   <packaging>pom</packaging>
 
   <url>https://github.com/GoogleCloudDataproc/hadoop-connectors</url>
@@ -79,7 +79,7 @@
 
     <gpg.skip>true</gpg.skip>
 
-    <bigdataoss.version>3.0.0-RC01-SNAPSHOT</bigdataoss.version>
+    <bigdataoss.version>3.0.0-RC01</bigdataoss.version>
 
     <google.api-client.version>2.1.1</google.api-client.version>
     <google.api-client-libraries.version>2.0.0</google.api-client-libraries.version>
