--- a/util/pom.xml
+++ b/util/pom.xml
@@ -21,12 +21,12 @@
   <parent>
     <groupId>com.google.cloud.bigdataoss</groupId>
     <artifactId>bigdataoss-parent</artifactId>
-    <version>3.0.0-RC01-SNAPSHOT</version>
+    <version>3.0.0-RC01</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>util</artifactId>
-  <version>3.0.0-RC01-SNAPSHOT</version>
+  <version>3.0.0-RC01</version>
 
   <dependencies>
     <dependency>
