--- a/util-hadoop/pom.xml
+++ b/util-hadoop/pom.xml
@@ -21,14 +21,14 @@
   <parent>
     <groupId>com.google.cloud.bigdataoss</groupId>
     <artifactId>bigdataoss-parent</artifactId>
-    <version>3.0.0-RC01</version>
+    <version>3.0.000001-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
   <name>util-hadoop</name>
 
   <artifactId>util-hadoop</artifactId>
-  <version>3.0.0-RC01</version>
+  <version>3.0.000001-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
